# pushkind-orders

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  pushkind-orders.service
.github/workflows/: deploy_dev.yml  test_pr.yml
migrations/2025-10-01-094038_create-template/: down.sql  up.sql
migrations/2025-10-01-094100_create-users-products-orders/: up.sql
migrations/2025-10-01-094200_add-order-products/: up.sql
migrations/2025-10-01-094300_create-price-levels/: down.sql  up.sql
migrations/2025-10-01-094400_move-product-price-into-levels/: down.sql  up.sql
migrations/2025-10-01-094500_add-product-units/: down.sql  up.sql
migrations/2025-10-01-094600_create-categories/: up.sql
migrations/2025-10-01-094700_add-product-category/: down.sql  up.sql
migrations/2025-10-01-094701_create-tags-and-product-tags/: down.sql  up.sql
migrations/2025-10-01-094800_create-customers/: up.sql
migrations/2025-10-28-191236_add-default-price-level/: down.sql  up.sql
migrations/2025-11-01-000000_add-customer-phone/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/domain/: category.rs  customer.rs  mod.rs  order.rs  price_level.rs  product.rs  product_price_level.rs  product_tag.rs  tag.rs  template.rs  user.rs
src/forms/: categories.rs  main.rs  mod.rs  price_levels.rs  products.rs  tags.rs
src/models/: category.rs  config.rs  customer.rs  mod.rs  order.rs  price_level.rs  product.rs  product_price_level.rs  product_tag.rs  tag.rs  template.rs  user.rs
src/routes/: api.rs  (+6 more)
templates/: base.html
tests/: db.rs  repository.rs  services_products.rs
(+40 files in other folders)
