[package]
name = "pushkind-orders"
version = "0.1.0"
edition = "2024"
default-run = "pushkind-orders"

[dependencies]
actix-files = "0.6.6"
actix-identity = "0.9.0"
actix-multipart = "0.7.2"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.11.0"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
diesel = { version = "2.2.12", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_qs = "0.12.0"
serde_html_form = "0.2.7"
serde_json = "1.0.143"
tera = { version = "1.20.0", features = ["builtins"] }
thiserror = "2.0.17"
pushkind-common = { git = "https://github.com/pushkindt/pushkind-common.git", branch = "main", features = [
    "db",
    "actix",
] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
diesel_migrations = "2.2.0"
mockall = "0.13.1"
tempfile = "3.13.0"
